# curate1

./: .gitattributes  .gitignore  Makefile  curate1.db  db.py  ingestion.py  main.py  quick-test.ipynb  transform.py
.data/: curate1.db
dagster/curate1/: pyproject.toml  setup.py
dagster/curate1/curate1.egg-info/: SOURCES.txt  requires.txt
prompts/specs/: coding-with-ai.txt  iac.txt
py/: Makefile  dev-requirements.txt  pip-requirements.txt  pyproject.toml
py/admin/: main.py  pyproject.toml  requirements.txt
py/dagster/: .envrc  Makefile  pyproject.toml  requirements.txt
py/dagster/.dagster/: dagster.yaml
py/dagster/curate1/: README.md  __init__.py  jobs.py  setup.cfg
py/dagster/curate1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
py/dagster/curate1/admin/: main.py
py/dagster/curate1/assets/: id_range_for_time.py  items.py
py/dagster/curate1/curate1/: partitions.py
py/dagster/curate1/curate1.egg-info/: PKG-INFO
py/dagster/curate1/curate1/resources/: hn_resource.py
py/dagster/curate1/resources/: __init__.py  article_resource.py
py/dagster/curate1/resources/agent/: agent_resource.py  filter_spec.py  middleware.py  model.py  perspective_summarizer.py
py/dagster/curate1/resources/database/: database.py  database_resource.py
py/dagster/curate1/resources/llm_response_cache/: llm_response_cache.py
py/dagster/curate1_dagster.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
py/dashboard/: app.py  requirements.txt
py/notebook/: .envrc  quick-test.ipynb  requirements.txt
py/v0/: copy_records.py  ingestion.py
(+6 files in other folders)
