[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "curate1-admin"
version = "0.1.0"
packages = [
  { include = "curate1" }
]

[tools.pyright]
reportMissingTypeArgument = true  # Report generic classes used without type arguments
strictListInference = true  # Use union types when inferring types of lists elements, instead of Any

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "^1.2.3"
curate1-dagster = "*"